<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:scatter="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@color/colorBGwhite"
    android:orientation="vertical"
    android:clickable="true"
    android:padding="8dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ColorCodeLayerOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/colorBGwhite"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageViewLayerOne"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:padding="5dp"
            android:background="@color/PieChartOrange" />

        <TextView
            android:id="@+id/textViewDisplaytextOne"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:text="@string/principal_amount" />

        <TextView
            android:id="@+id/textViewDisplayTextOneValue"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interest_earned" />

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ColorCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBGwhite"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageViewDisplayImage"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:background="@color/PieChartBlue" />

        <TextView
            android:id="@+id/textViewDisplaytextTwo"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/principal_amount" />

        <TextView
            android:id="@+id/textViewDisplaytextTwoValue"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/principal_amount" />


    </LinearLayout>


    <com.bankerwala.app.PieChart
        android:id="@+id/pie_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        scatter:aboutChart="@string/maturity_amount"
        scatter:aboutChartValue="1,00,000.00"
        scatter:aboutTextColor="@color/RED"
        scatter:aboutTextSize="35"
        scatter:centerColor="@color/colorBGwhite"
        scatter:chartColor="#0D47A1"
        scatter:equalPartition="false"
        scatter:textColor="@color/colorAccent"
        scatter:textSize="25" />

</LinearLayout>
